# local-transcribe

./: .gitattributes  CLAUDE.md  MANIFEST.in  Makefile  README.md  TEST_PLAN.md  plan-backend-separation.md  pyproject.toml  pytest.ini
.github/workflows/: quality.yml  version-check.yml
docs/: architecture.md  cli.md  config.md  performance-testing.md
local_transcribe/: __init__.py  chunking.py  recording.py  transcription.py
local_transcribe_ui/: __init__.py  __main__.py  config.py  controller.py  gui.py  lock.py  protocol.py  recording_controller.py  settings.py
make/: pipx.mk
tests/: conftest.py  test_chunking.py  test_cmd_transcribe.py  test_controller.py  test_lock.py  test_protocol.py  test_recording.py  test_recording_controller.py  test_settings.py  test_transcription.py
