[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-transcribe"
version = "0.3.6"
description = "Chunked local speech-to-text engine and UI using faster-whisper"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Naveen Malik"}
]
keywords = ["transcription", "whisper", "speech-to-text", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy==1.11.2",
    "radon>=5.0",
]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "sounddevice.*"]
ignore_missing_imports = true

[project.scripts]
local-transcribe = "local_transcribe_ui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_transcribe*"]
